Enable Gemini 2.5 Pro for all clients
- Updated preferred model list to prioritize gemini-2.0-flash-exp (Gemini 2.5 Pro)
- Set GEMINI_MODEL_NAME=gemini-2.0-flash-exp in .env and docker-compose files
- Updated .env.example with Gemini 2.5 Pro as default
- Updated README.md to document GEMINI_MODEL_NAME configuration
- Verified successful initialization with Gemini 2.5 Pro in logs

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,6 +23,7 @@ services:
       - ES_URL=${ES_URL}
       - KIBANA_BASE_URL=${KIBANA_BASE_URL}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - GEMINI_MODEL_NAME=gemini-2.0-flash-exp
       - ALLOWED_INDEX_PATTERNS=${ALLOWED_INDEX_PATTERNS}
     ports:
       - "8000:8000"
