--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ KIBANA_DATA_VIEW_ID=logs-*
 
 # Google Gemini API
 GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL_NAME=gemini-2.0-flash-exp
 
 # Security & Limits
 ALLOWED_INDEX_PATTERNS=logs-*,meta-dictionary
