--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
       - KIBANA_BASE_URL=http://localhost:5601
       - KIBANA_DATA_VIEW_ID=logs-*
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - GEMINI_MODEL_NAME=gemini-2.0-flash-exp
       - ALLOWED_INDEX_PATTERNS=logs-*,meta-dictionary
       - MAX_RESULT_SIZE=200
     ports:
