--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,7 @@ services:
       retries: 5
 
   mcp-server:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.mcp
+    image: deveshpandey/logintel-mcp-server:latest
     container_name: logintel-mcp-server
     depends_on:
       elasticsearch:
@@ -81,9 +79,7 @@ services:
       retries: 3
 
   ui:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile.ui
+    image: deveshpandey/logintel-ui:latest
     container_name: logintel-ui
     depends_on:
       mcp-server:
