Trigger AMD64 Docker image builds
- Add comment to trigger GitHub Actions workflow
- Build linux/amd64 images for Render compatibility
- Replace ARM64 images with AMD64 versions

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,5 +1,7 @@
 name: Build and Push Docker Images
 
+# Trigger AMD64 builds for cloud deployment compatibility
+
 on:
   push:
     branches: [ main ]
