Remove ELASTIC_PASSWORD from Dockerfile
- Removed ELASTIC_PASSWORD env var that was causing Docker Hub push failures
- Successfully built all AMD64 images for cloud deployment
- All images now compatible with Render and other AMD64 platforms

--- a/docker/Dockerfile.elasticsearch
+++ b/docker/Dockerfile.elasticsearch
@@ -8,7 +8,7 @@ FROM elasticsearch:9.1.0
 ENV discovery.type=single-node
 ENV xpack.security.enabled=false
 ENV ES_JAVA_OPTS="-Xms512m -Xmx512m"
-ENV ELASTIC_PASSWORD=changeme
+# ENV ELASTIC_PASSWORD=changeme  # Commented out to avoid Docker Hub issues
 ENV bootstrap.memory_lock=true
 ENV cluster.name=docker-cluster
 ENV cluster.routing.allocation.disk.threshold_enabled=false
